# pokoy

./: .gitignore  CMakeLists.txt  Makefile  README.asciidoc  README.md  TODO  pokoy  pokoy.1  pokoy.1.txt  pokoy.c  pokoyrc
